--- a/src/App.css
+++ b/src/App.css
@@ -32,10 +32,7 @@ a.socials {
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-    background-image: url('./assets/img/header-img.svg');
-    background-position: top center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    
 }
 
 .App-link {
@@ -77,7 +74,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     border-color: transparent;
 }
-
+img.banner-col2 {
+    background-image: url('./assets/img/header-img.svg');
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 .banner {
     margin-top: 0;
     padding: 260px 0 100px 0;
